[tool.poetry]
name = "buildings"
version = "0.1.0"
description = ""
authors = ["Daniel Tahara <dktahara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
jupyter = "^1.0.0"
jupytext = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
